First commited as before_65193_rev4